--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,20 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "laraveles/spanish": "^1.5",
+        "protonemedia/laravel-splade": "^1.4",
+        "protonemedia/laravel-splade-breeze": "^2.5"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "laravel/dusk": "^7.7",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.0",
+        "protonemedia/laravel-dusk-fakes": "^1.4",
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
