--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,14 @@
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
+        "kirschbaum-development/eloquent-power-joins": "^3.0",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laraveles/spanish": "^1.5",
         "protonemedia/laravel-splade": "^1.4",
-        "protonemedia/laravel-splade-breeze": "^2.5"
+        "protonemedia/laravel-splade-breeze": "^2.5",
+        "spatie/laravel-query-builder": "^5.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
