--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laraveles/spanish": "^1.5",
+        "maatwebsite/excel": "^3.1",
         "protonemedia/laravel-splade": "^1.4",
         "protonemedia/laravel-splade-breeze": "^2.5",
         "spatie/laravel-query-builder": "^5.2"
